--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -15,7 +15,7 @@ layout: page
 
     {% include index/featured-terms.html field="subject" title="Top Subjects" btn-color="primary" %}
 
-     {% include index/featured-terms.html field="classificationterms" title="Art Styles" btn-color="primary" %}
+     {% include index/featured-terms.html field="classificationterms" title="Art Style" btn-color="primary" %}
 
     {% include index/objects.html %}
 
